fix(bench): port go/java/nodejs to the API spec (wave 2B) (#430)
* fix(bench): port go/java/nodejs to the API spec (wave 2B)

Bring the Go, Java, and Node.js reference APIs into full conformance
with the frozen contract (benchmarks/shared/API-SPEC.md, family C):

All three:
- Family C response shapes for all seven /api/* endpoints
- Dataset load is FATAL (§2): no PRNG fallback, schema-count checks,
  BENCH_DATA_PATH failure exits non-zero
- /health byte-constant precomputed at startup (§5.1)
- /download/{size}: 0x42 fill, 8 KiB chunks, 2 GiB clamp, X-Download-Bytes,
  Server-Timing proc;dur (§5.2)
- /upload: {"received_bytes":N} + X-Networker-Received-Bytes + recv;dur,
  echoes X-Networker-Request-Id (§5.3)
- zlib (RFC 1950) level 6 for /api/upload/process (§5.8)
- delayed default 10 ms, clamped [1,100], work ignored (§5.9)
- validate returns {seed, checksums} (§5.10)
- BENCH_WORKERS per the §3 mechanism table, nproc + effective value logged
- §1 benchmark headers on every /api/* response, including errors and
  HEAD requests (the validator header-checks with curl -I)
- Integral floats keep their ".0" (frozen dataset has q2.mean = 39.0;
  Go json.Marshal / JS JSON.stringify would emit 39 and break the §7
  Python-canonicalized checksums)

Go: typed dataset structs (score float64, timeseries objects — parsing
into int/bare-float zeroed the data, audit F2), parse once at startup
(F6), compress/flate → compress/zlib level 6, family A shapes → C,
range-required 400 and i%5 bucketing dropped, GOMAXPROCS = BENCH_WORKERS,
Dockerfile builder bumped to golang:1.24 (go.mod requires 1.24).

Node: aggregate reads p.value (summing objects emitted NaN, audit F2),
family B wrappers → C, cluster module with BENCH_WORKERS processes,
zlib.crc32, ordinal (not locale) string sorts, spec-exact param clamps.

Java: hand-rolled JSON scanner (broke on escaped quotes, audit F5)
replaced with a complete recursive-descent JSON parser/writer, family
A/B mix → C, zeros/64 KiB download → 0x42/8 